# src/controller/CategoriaUsuarioController.ts
@@ -3,7 +3,7 @@ import { Body,Controller,Delete,Get,Path,Post,Put,Query,Res,
     Route,Tags,TsoaResponse
  } from "tsoa";
 import { BasicResponseDto } from "../model/dto/BasicResponseDto";
-import { CategoriaLivro } from "../model/entidades/CategoriaLivro";
+import { CategoriaUsuario } from "../model/entidades/CategoriaUsuario";
 @Route("catalogos/categorias_usuario")
 @Tags("Categoria Usuário")
 
@@ -14,7 +14,7 @@ export class CategoriaUsuarioController extends Controller{
     async ListarTodasCategorias(
         @Res()fail:TsoaResponse<400,BasicResponseDto>,
         @Res()success:TsoaResponse<200,BasicResponseDto>
-    ):Promise<CategoriaLivro[]>{
+    ):Promise<CategoriaUsuario[]>{
         try{
             return await this.categoriaUsuarioService.SelectTodasCategoriasUsuarios();
         }catch(error:any){
